# OptionsAgents

./: .env.example  .gitignore  HOW_TO_RUN_GAMMA_SAM.md  README.md  README_STREAMING.md  SNAPSHOT_FIX_SUMMARY.md  SYSTEM_ARCHITECTURE.md  check_option_format.py  check_recent_trades.py  check_snapshot_gamma.py  check_snapshot_status.py  claude.md  cleanup_pin_detection.sh  conftest.py  create_next_day_snapshot.py  dealer_gamma.md  dealer_gamma_fixes.md  debug_gamma.py  debug_parquet_schema.py  debug_snapshot_columns.py  debug_trades.py  diagnose_queue.py  emergency_gamma.py  emergency_quotes.py  fix_snapshot_now.py  fix_symbols.py  fixed_symbol_loader.py  gamma-tool-sam.md  gamma_sam_port5000.py  gamma_sam_simple.py  gamma_sam_standalone.py  gamma_tool_sam_web.py  live_monitoring_dashboard.py  market.duckdb  migrate_to_fixed_snapshot.sh  minimal_client.py  monitor_system.py  options_dashboard_plan.md  polygon_simple_fixed.py  polygon_simple_test.py  (+43 more)
dashboard/: package-lock.json  package.json
data/: intraday.db  intraday.db.temp  replay.db.wal
debug_files/: debug_websocket.py  fixed_dashboard_config.py  options_websocket_test.py  simple_polygon_test.py
gamma_tool_sam/: README.md  __init__.py  gamma_engine.py  integration.py  run.py
old_tests/: test_enhanced_pins.py  test_feed.py  test_snapshot_system.py
scripts/: cleanup_logs.sh  monitor_system.sh  run_snapshot_scheduler.py
src/: cli.py  directional_pin_detector.py  persistence.py  polygon_helpers.py
test_data/: test_gamma.db
tests/: data_ingestion_tests.py  dealer_gamma_test_fix.py  spx_5850_focused_test.py  (+29 more)
(+577 files in other folders)
